[gd_scene load_steps=3 format=3 uid="uid://btdsegbjrqonp"]

[ext_resource type="Script" path="res://UI.gd" id="1_yll5f"]
[ext_resource type="PackedScene" uid="uid://dlwq4kmdb3bhs" path="res://addons/easy_charts/control_charts/chart.tscn" id="2_3iyss"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_yll5f")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 71.0
offset_top = 26.0
offset_right = 95.0
offset_bottom = 146.0
color = Color(0, 0.466667, 1, 1)

[node name="HSlider" type="HSlider" parent="."]
offset_left = 32.0
offset_top = 440.0
offset_right = 1112.0
offset_bottom = 456.0
max_value = 300.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 392.0
offset_top = 128.0
offset_right = 592.0
offset_bottom = 232.0

[node name="Start" type="Button" parent="."]
offset_left = 24.0
offset_top = 376.0
offset_right = 64.0
offset_bottom = 408.0

[node name="Stop" type="Button" parent="."]
offset_left = 96.0
offset_top = 376.0
offset_right = 136.0
offset_bottom = 408.0

[node name="Chart" parent="." instance=ExtResource("2_3iyss")]
offset_left = 132.0
offset_top = 5.0
offset_right = 1086.0
offset_bottom = 436.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Start" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Stop" to="." method="_on_stop_pressed"]
